2001-09-11  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (elf64_alpha_relocate_section): Do not
	apply HINT relocations against dynamic symbols.

2001-09-11  H.J. Lu  <hjl@gnu.org>

	* linker.c (link_action): Change COMMON_ROW\defw from CREF to COM.

2001-09-09  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c: Delete all unused ERIC_neverdef and rth_notdef code.

	* elf64-alpha.c (elf64_alpha_relax_with_lituse): Nop out gpdisp
	following a call to a near function.

2001-09-08  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (elf64_alpha_relocate_section): Soft fail
	relocation errors.  Fail gp-relative relocations against
	dynamic symbols.

2001-09-08  Alan Modra  <amodra@bigpond.net.au>

	* elf32-i386.c (elf_i386_relocate_section): Check !DEF_REGULAR
	as well as DEF_DYNAMIC in test for avoided copy relocs.
	(allocate_plt_and_got_and_discard_relocs): Likewise.
	* elf32-hppa.c (elf_i386_relocate_section): Likewise.
	(allocate_plt_and_got_and_discard_relocs): Likewise.

2001-09-07  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elf32-mips.c (mips_elf_calculate_relocation): Fix overflow handling
	of R_MIPS_PC16.

2001-09-06  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elf64-mips.c (mips_elf64_howto_table_rel): Fix relocation HOWTO
	definitions.
	(mips_elf64_howto_table_rel): Likewise.

2001-09-05  Tom Rix <trix@redhat.com>

	* xcofflink.c (bfd_xcoff_import_symbol): Handle import file XMC_XO
	and syscall symbols.
	(write_global_symbol) : Same.
	(bfd_xcoff_export_symbol): Remove unused syscall param.
	* libxcoff.h: Change prototype of bfd_xcoff_export symbol and
	bfd_xcoff_import_symbol.
	* bfd-in.h: Same.
	* bfd-in2.h : Regenerate.

2001-09-04  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (SKIP_HOWTO): New.
	(elf64_alpha_howto_table): Use it to remove dead ECOFF relocs.
	Fix sizes of 16-bit mem format relocs.
	(elf64_alpha_reloc_map): Update to match.
	(elf64_alpha_relax_with_lituse): Use GPREL16 as appropriate.